modify line height to stop text from overlapping

--- a/components/sectionTitle/SectionTitle.module.css
+++ b/components/sectionTitle/SectionTitle.module.css
@@ -1,6 +1,7 @@
 .section__header {
     text-align: center;
-    margin-bottom: 150px;
+    margin-bottom: 120px;
+    margin-top: 8rem;
 }
 
 .section__header-title {
@@ -25,6 +26,6 @@
 
 @media(min-width: 595px) {
     .section__header-title {
-        line-height: unset;
+        /* line-height: unset; */
     }
 }
